{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 317,
  "lineage": "bde39b99-96e4-316c-ba9c-a62d97f0d90c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0708689cfc3edb71d",
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:instance/i-09b7253be63542762",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b7253be63542762",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bsw-ap-northeast-3",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030e93fdc1506e54d",
            "private_dns": "ip-10-0-11-177.ap-northeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.177",
            "public_dns": "ec2-15-168-16-161.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.168.16.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08bac0e82d0e2a25f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b305759a9e37441b",
            "tags": {
              "Name": "Devos-was"
            },
            "tags_all": {
              "Name": "Devos-was"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0116b80c13bbe867c",
              "sg-0d5626cd473810ced"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_security_group.was",
            "aws_subnet.pub1_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0708689cfc3edb71d",
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:instance/i-05fa2cc21fcecfb2d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fa2cc21fcecfb2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bsw-ap-northeast-3",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d54c86f7770f3434",
            "private_dns": "ip-10-0-1-192.ap-northeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_dns": "ec2-15-152-40-216.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.152.40.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd2087a8e8af6b25",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fddcc3343dacde15",
            "tags": {
              "Name": "Devos-web"
            },
            "tags_all": {
              "Name": "Devos-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0116b80c13bbe867c",
              "sg-06cdbbfb5e1b87dcf"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_security_group.web",
            "aws_subnet.pub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:internet-gateway/igw-0ecbcbe092157b539",
            "id": "igw-0ecbcbe092157b539",
            "owner_id": "765606275717",
            "tags": {
              "Name": "Devos-igw"
            },
            "tags_all": {
              "Name": "Devos-igw"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:route-table/rtb-02dd0e401e9c393ad",
            "id": "rtb-02dd0e401e9c393ad",
            "owner_id": "765606275717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecbcbe092157b539",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Devos-rtb-public"
            },
            "tags_all": {
              "Name": "Devos-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d66dd9baed44648d",
            "route_table_id": "rtb-02dd0e401e9c393ad",
            "subnet_id": "subnet-0b305759a9e37441b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.pub1_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8b487ef2d67d2d",
            "route_table_id": "rtb-02dd0e401e9c393ad",
            "subnet_id": "subnet-0529d08b81cadedb6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.pub1_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013ae9409f7f54123",
            "route_table_id": "rtb-02dd0e401e9c393ad",
            "subnet_id": "subnet-0fddcc3343dacde15"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.pub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075efdab5dfb19f21",
            "route_table_id": "rtb-02dd0e401e9c393ad",
            "subnet_id": "subnet-0fcc5975de6181ea0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub",
            "aws_subnet.pub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:security-group/sg-0287671fc19d6ff06",
            "description": "Allow MYSQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0287671fc19d6ff06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL from WEB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06cdbbfb5e1b87dcf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_mysql",
            "name_prefix": "",
            "owner_id": "765606275717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Name": "allow_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:security-group/sg-0116b80c13bbe867c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0116b80c13bbe867c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "765606275717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:security-group/sg-0d5626cd473810ced",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5626cd473810ced",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WAS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_was",
            "name_prefix": "",
            "owner_id": "765606275717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_was"
            },
            "tags_all": {
              "Name": "allow_was"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:security-group/sg-06cdbbfb5e1b87dcf",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cdbbfb5e1b87dcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "765606275717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:subnet/subnet-0b305759a9e37441b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b305759a9e37441b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765606275717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devos_Was_subnet_a"
            },
            "tags_all": {
              "Name": "Devos_Was_subnet_a"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:subnet/subnet-0529d08b81cadedb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0529d08b81cadedb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765606275717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devos_Was_subnet_c"
            },
            "tags_all": {
              "Name": "Devos_Was_subnet_c"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:subnet/subnet-071ccaef46338ec6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.211.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071ccaef46338ec6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765606275717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devos_DB_subnet_a"
            },
            "tags_all": {
              "Name": "Devos_DB_subnet_a"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:subnet/subnet-054a4fd5dff094b1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.212.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a4fd5dff094b1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765606275717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devos_DB_subnet_c"
            },
            "tags_all": {
              "Name": "Devos_DB_subnet_c"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:subnet/subnet-0fddcc3343dacde15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fddcc3343dacde15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765606275717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devos_Web_subnet_a"
            },
            "tags_all": {
              "Name": "Devos_Web_subnet_a"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:subnet/subnet-0fcc5975de6181ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcc5975de6181ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765606275717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devos_Web_subnet_c"
            },
            "tags_all": {
              "Name": "Devos_Web_subnet_c"
            },
            "vpc_id": "vpc-0f449422ca463a2c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:765606275717:vpc/vpc-0f449422ca463a2c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099d3b4b95f8b90e7",
            "default_route_table_id": "rtb-0d04b5c2adf072304",
            "default_security_group_id": "sg-0d921ff57a8eac3b9",
            "dhcp_options_id": "dopt-05c7ac6c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f449422ca463a2c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d04b5c2adf072304",
            "owner_id": "765606275717",
            "tags": {
              "Name": "Devos-vpc"
            },
            "tags_all": {
              "Name": "Devos-vpc"
            }
          }
        }
      ]
    }
  ]
}